--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -8,8 +8,8 @@
 <!--    android:padding="16dp">-->
 
     <RadioGroup
-        android:layout_width="155dp"
-        android:layout_height="100dp"
+        android:layout_width="167dp"
+        android:layout_height="142dp"
         android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.987"
@@ -32,7 +32,7 @@
         <RadioButton
             android:id="@+id/radioButton3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:text="Monthly" />
     </RadioGroup>
 
@@ -81,11 +81,13 @@
         android:id="@+id/textView2"
         android:layout_width="411dp"
         android:layout_height="52dp"
-        android:background="#5867B8"
+        android:background="@color/colorPrimary"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:text="Import Meds"
-        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +106,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintVertical_bias="0.709" />
 
     <EditText
         android:id="@+id/editText5"
@@ -117,6 +121,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
