--- a/app/src/main/res/layout-land/importmedication.xml
+++ b/app/src/main/res/layout-land/importmedication.xml
@@ -8,32 +8,34 @@
 <!--    android:padding="16dp">-->
 
     <RadioGroup
-        android:layout_width="167dp"
-        android:layout_height="142dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="350dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="24dp"
+        android:orientation='horizontal'
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintStart_toEndOf="@+id/editText2"
+        app:layout_constraintHorizontal_bias="0.805"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText">
 
         <RadioButton
             android:id="@+id/radioButton"
-            android:layout_width="match_parent"
+            android:layout_width="121dp"
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="Daily" />
 
         <RadioButton
             android:id="@+id/radioButton2"
-            android:layout_width="match_parent"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:text="Weekly" />
 
         <RadioButton
             android:id="@+id/radioButton3"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_width="96dp"
+            android:layout_height="wrap_content"
             android:text="Monthly" />
+
     </RadioGroup>
 
     <EditText
@@ -52,9 +54,9 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="176dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="334dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Dosage"
         android:inputType="textPersonName"
@@ -62,21 +64,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="296dp"
-        android:layout_height="41dp"
+        android:layout_width="416dp"
+        android:layout_height="40dp"
         android:layout_marginTop="340dp"
         android:background="#5867B8"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -96,25 +97,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginTop="96dp"
-        android:ems="10"
-        android:hint="Reminder time"
-        android:inputType="time"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
-
-    <EditText
         android:id="@+id/editText5"
         android:layout_width="match_parent"
         android:layout_height="43dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="23dp"
         android:ems="10"
         android:hint="(Optional) Supply"
         android:inputType="time"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        tools:layout_editor_absoluteX="-1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="Reminder time"
+        android:inputType="time"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
