Add buttons for 7 days of the week. Fix color of plus button. Add title

--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -21,19 +21,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="Daily" />
+            android:text="@string/radioDaily" />
 
         <RadioButton
             android:id="@+id/radioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Weekly" />
+            android:text="@string/radioWeekly" />
 
         <RadioButton
             android:id="@+id/radioButton3"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            android:text="Monthly" />
+            android:text="4 Weekly" />
     </RadioGroup>
 
     <EditText
