Add close button to med page and moved save button. Caps on name field.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,8 +146,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="317dp"
+        android:layout_height="129dp"
         android:layout_marginTop="120dp"
         android:text="Show received data from full screen dialog"
         android:textSize="17sp"
