--- a/app/src/main/res/layout-land/importmedication.xml
+++ b/app/src/main/res/layout-land/importmedication.xml
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/saveButton"
         android:layout_width="416dp"
         android:layout_height="40dp"
         android:layout_marginTop="340dp"
