--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -38,13 +38,14 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="478dp"
+        android:layout_height="59dp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textPersonName"
+        android:inputType="textCapWords"
         android:padding="8dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +53,9 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="176dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="184dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="88dp"
         android:ems="10"
         android:hint="Dosage"
         android:inputType="textPersonName"
@@ -65,31 +66,34 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="296dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="340dp"
+        android:id="@+id/saveButton"
+        android:layout_width="75dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="4dp"
         android:background="#5867B8"
         android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="12sp"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="39dp"
+        android:layout_width="454dp"
+        android:layout_height="63dp"
         android:background="@color/colorPrimary"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:text="Import Meds"
-        android:textAlignment="center"
+        android:paddingLeft="90dp"
+        android:text="New Medication"
+        android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,5 +120,21 @@
         android:inputType="time"
         app:layout_constraintTop_toBottomOf="@+id/editText3"
         tools:layout_editor_absoluteX="-1dp" />
+
+    <Button
+        android:id="@+id/closeButton"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="2dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="2dp"
+        app:elevation="0dp"
+        app:icon="@drawable/ic_close"
+        app:iconPadding="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
