--- a/app/src/main/res/layout-land/importmedication.xml
+++ b/app/src/main/res/layout-land/importmedication.xml
@@ -28,11 +28,11 @@
         android:weightSum="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toEndOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText">
+        app:layout_constraintStart_toEndOf="@+id/dosageTxt"
+        app:layout_constraintTop_toBottomOf="@+id/nameTxt">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/dailyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -40,7 +40,7 @@
             android:text="@string/radioDaily" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/weeklyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,7 +55,7 @@
     </RadioGroup>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/nameTxt"
         android:layout_width="match_parent"
         android:layout_height="59dp"
         android:layout_marginLeft="8dp"
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/dosageTxt"
         android:layout_width="179dp"
         android:layout_height="69dp"
         android:layout_marginLeft="8dp"
