--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/monButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -36,7 +36,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/tueButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -51,7 +51,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/wedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -68,7 +68,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/thuButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -85,7 +85,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/friButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -99,7 +99,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/satButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -113,7 +113,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/sunButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
