--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -11,10 +11,20 @@
         android:id="@+id/newReminderTime"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="276dp"
         android:text="17:38 PM"
         android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="256dp"
+        android:paddingLeft="12dp"
+        android:text="Reminder Time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,45 +32,40 @@
         android:id="@+id/setReminderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="308dp"
+        android:layout_marginTop="276dp"
         android:text="Set Reminder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toEndOf="@+id/newReminderTime"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="187dp"
-        android:layout_height="148dp"
+        android:id="@+id/recurrance"
+        android:layout_width="182dp"
+        android:layout_height="102dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintStart_toEndOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText">
+        app:layout_constraintStart_toEndOf="@+id/dosageTxt"
+        app:layout_constraintTop_toBottomOf="@+id/nameTxt">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/dailyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/radioDaily" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/weeklyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/radioWeekly" />
 
-        <RadioButton
-            android:id="@+id/radioButton3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="4 Weekly" />
     </RadioGroup>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/nameTxt"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginLeft="8dp"
@@ -75,9 +80,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        <requestFocus />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/dosageTxt"
         android:layout_width="184dp"
         android:layout_height="55dp"
         android:layout_marginLeft="12dp"
@@ -131,24 +137,13 @@
         android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:paddingLeft="0dp"
+        android:paddingLeft="2dp"
         android:paddingTop="2dp"
-        android:paddingRight="0dp"
+        android:paddingRight="2dp"
         android:paddingBottom="2dp"
         app:elevation="0dp"
         app:icon="@drawable/ic_close"
-        app:iconPadding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="288dp"
-        android:paddingLeft="12dp"
-        android:text="Reminder Time"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
