- swap callback listener to take new medication class - delete frequency class - move time picker code to function - use built in color resources - create medication class - add gson for storage

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryDark">#DADCE0</color>
     <color name="colorAccent">#E0E0E0</color>
     <color name="white">#FFFFFFFF</color>
+    <string name="selected">#8E56DF</string>
 </resources>
