Add edit functionality and layout option, including horizontal screen.

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/holo_purple"
+    android:background="@android:color/darker_gray"
     android:layout_marginBottom="8dp">
 
 
@@ -12,21 +12,32 @@
         android:id="@+id/nameView"
         style="@style/word_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_purple" />
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/dosageView"
         style="@style/word_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_purple" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/reminderView"
         style="@style/word_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
 
+    android:layout_gravity="end">
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:text="Edit" />
     <Button
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
@@ -36,5 +47,7 @@
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:text="Delete" />
+</LinearLayout>
+
 
 </LinearLayout>
