--- a/app/src/main/res/layout-land/editmedication.xml
+++ b/app/src/main/res/layout-land/editmedication.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<!--    android:padding="16dp">-->
+    <!--    android:padding="16dp">-->
 
     <Button
         android:id="@+id/setReminderButton"
@@ -104,7 +104,7 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:paddingLeft="90dp"
-        android:text="New Medication"
+        android:text="Edit Medication"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
