--- a/app/src/main/res/layout/editmedication.xml
+++ b/app/src/main/res/layout/editmedication.xml
@@ -5,45 +5,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<!--    android:padding="16dp">-->
+    <!--    android:padding="16dp">-->
+
+    <TextView
+        android:id="@+id/newReminderTime"
+        android:layout_width="wrap_content"
+        android:layout_height="41dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="276dp"
+        android:text="17:38 PM"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="256dp"
+        android:paddingLeft="12dp"
+        android:text="Reminder Time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/setReminderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="264dp"
+        android:layout_marginTop="276dp"
         android:text="Set Reminder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toEndOf="@+id/newReminderTime"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <RadioGroup
-        android:id="@+id/radioGroup2"
-        android:layout_width="509dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:weightSum="3"
+        android:id="@+id/recurrance"
+        android:layout_width="182dp"
+        android:layout_height="102dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toEndOf="@+id/dosageTxt"
         app:layout_constraintTop_toBottomOf="@+id/nameTxt">
 
         <RadioButton
             android:id="@+id/dailyButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:checked="true"
             android:text="@string/radioDaily" />
 
         <RadioButton
             android:id="@+id/weeklyButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/radioWeekly" />
 
     </RadioGroup>
@@ -51,7 +67,7 @@
     <EditText
         android:id="@+id/nameTxt"
         android:layout_width="match_parent"
-        android:layout_height="59dp"
+        android:layout_height="58dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginRight="8dp"
@@ -64,17 +80,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+    <requestFocus />
 
     <EditText
         android:id="@+id/dosageTxt"
-        android:layout_width="179dp"
-        android:layout_height="69dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="184dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="88dp"
         android:ems="10"
         android:hint="Dosage"
         android:inputType="number"
-        android:padding="8dp"
+        android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,13 +115,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="886dp"
-        android:layout_height="67dp"
+        android:layout_width="454dp"
+        android:layout_height="63dp"
         android:background="@color/colorPrimary"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:paddingLeft="90dp"
-        android:text="New Medication"
+        android:text="Edit Medication"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -120,35 +137,13 @@
         android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:paddingLeft="0dp"
+        android:paddingLeft="2dp"
         android:paddingTop="2dp"
-        android:paddingRight="0dp"
+        android:paddingRight="2dp"
         android:paddingBottom="2dp"
         app:elevation="0dp"
         app:icon="@drawable/ic_close"
-        app:iconPadding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/newReminderTime"
-        android:layout_width="164dp"
-        android:layout_height="41dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="264dp"
-        android:text="17:38 PM"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="244dp"
-        android:text="Reminder Time"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
