--- a/app/src/main/res/layout-land/importmedication.xml
+++ b/app/src/main/res/layout-land/importmedication.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="264dp"
-        android:text="Set Reminder"
+        android:text="@string/set_reminder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/newReminderTime"
@@ -56,7 +56,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name_hint"
         android:inputType="textCapWords"
         android:padding="8dp"
         android:textSize="24sp"
@@ -72,7 +72,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="88dp"
         android:ems="10"
-        android:hint="Dosage"
+        android:hint="@string/dosage"
         android:inputType="number"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="4dp"
         android:background="#5867B8"
-        android:text="Save"
+        android:text="@string/save"
         android:textSize="12sp"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="0dp"
@@ -104,7 +104,7 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:paddingLeft="90dp"
-        android:text="New Medication"
+        android:text="@string/new_medication"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -136,7 +136,7 @@
         android:layout_height="41dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="264dp"
-        android:text="17:38 PM"
+        android:text="@string/sampletime"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -147,7 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="244dp"
-        android:text="Reminder Time"
+        android:text="@string/reminder_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
