--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -13,7 +13,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="276dp"
-        android:text="17:38 PM"
+        android:text="@string/sampletime"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="256dp"
         android:paddingLeft="12dp"
-        android:text="Reminder Time"
+        android:text="@string/reminder_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="276dp"
-        android:text="Set Reminder"
+        android:text="@string/set_reminder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toEndOf="@+id/newReminderTime"
@@ -72,7 +72,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name_hint"
         android:inputType="textCapWords"
         android:padding="8dp"
         android:textSize="24sp"
@@ -89,7 +89,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="88dp"
         android:ems="10"
-        android:hint="Dosage"
+        android:hint="@string/dosage"
         android:inputType="number"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +103,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="4dp"
         android:background="#5867B8"
-        android:text="Save"
+        android:text="@string/save"
         android:textSize="12sp"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="0dp"
@@ -121,7 +121,7 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:paddingLeft="90dp"
-        android:text="New Medication"
+        android:text="@string/new_medication"
         android:textAlignment="textStart"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
