--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -37,7 +37,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
-        android:text="Edit" />
+        android:text="@string/edit" />
     <Button
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
-        android:text="Delete" />
+        android:text="@string/delete" />
 </LinearLayout>
 
 
