Swap to Dark THEME!

--- a/app/src/main/res/layout-land/editmedication.xml
+++ b/app/src/main/res/layout-land/editmedication.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimarySelected"
+    >
     <!--    android:padding="16dp">-->
 
     <Button
@@ -37,14 +39,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:checked="true"
-            android:text="@string/radioDaily" />
+            android:text="@string/radioDaily"
+            android:textColor="@color/white"/>
 
         <RadioButton
             android:id="@+id/weeklyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/radioWeekly" />
+            android:text="@string/radioWeekly"
+            android:textColor="@color/white"/>
 
     </RadioGroup>
 
@@ -63,7 +67,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <EditText
         android:id="@+id/dosageTxt"
@@ -78,7 +84,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -112,7 +120,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColorHint="@color/white"/>
 
     <Button
         android:id="@+id/closeButton"
@@ -139,7 +148,8 @@
         android:text="@string/sampletime"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColorHint="@color/white"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -149,6 +159,7 @@
         android:layout_marginTop="244dp"
         android:text="@string/reminder_time"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColorHint="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
