--- a/app/src/main/res/layout/editmedication.xml
+++ b/app/src/main/res/layout/editmedication.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimarySelected">
     <!--    android:padding="16dp">-->
 
     <TextView
@@ -16,7 +17,8 @@
         android:text="@string/sampletime"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -26,7 +28,8 @@
         android:paddingLeft="12dp"
         android:text="@string/reminder_time"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/setReminderButton"
@@ -54,13 +57,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="@string/radioDaily" />
+            android:text="@string/radioDaily"
+            android:textColor="@color/white"/>
 
         <RadioButton
             android:id="@+id/weeklyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/radioWeekly" />
+            android:text="@string/radioWeekly"
+            android:textColor="@color/white"/>
 
     </RadioGroup>
 
@@ -79,7 +84,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"/>
     <requestFocus />
 
     <EditText
@@ -95,7 +102,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -124,12 +133,12 @@
         android:text="@string/edit_medication"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/closeButton"
