--- a/app/src/main/res/layout/importmedication.xml
+++ b/app/src/main/res/layout/importmedication.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimarySelected">
 <!--    android:padding="16dp">-->
 
     <TextView
@@ -16,7 +17,8 @@
         android:text="@string/sampletime"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -26,7 +28,8 @@
         android:paddingLeft="12dp"
         android:text="@string/reminder_time"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/setReminderButton"
@@ -37,7 +40,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toEndOf="@+id/newReminderTime"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        android:textColor="@color/white"/>
 
     <RadioGroup
         android:id="@+id/recurrance"
@@ -47,20 +51,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toEndOf="@+id/dosageTxt"
-        app:layout_constraintTop_toBottomOf="@+id/nameTxt">
+        app:layout_constraintTop_toBottomOf="@+id/nameTxt"
+        android:textColor="@color/white">
 
         <RadioButton
             android:id="@+id/dailyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="@string/radioDaily" />
+            android:text="@string/radioDaily"
+            android:textColor="@color/white"/>
 
         <RadioButton
             android:id="@+id/weeklyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/radioWeekly" />
+            android:text="@string/radioWeekly"
+            android:textColor="@color/white"/>
 
     </RadioGroup>
 
@@ -79,7 +86,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
         <requestFocus />
 
     <EditText
@@ -95,7 +104,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -111,7 +122,8 @@
         app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView2"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -129,7 +141,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <Button
         android:id="@+id/closeButton"
@@ -144,6 +157,7 @@
         app:elevation="0dp"
         app:icon="@drawable/ic_close"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        android:textColor="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
